# blueboat_stonefish_core

./: CMakeLists.txt  README.md  package.xml
config/: blueboat_cirtesu_config.rviz  ekf_fastlio_gt.yaml
data/cirtesu/: full_cirtesu_physics.mtl  full_cirtesu_physics_roof.mtl  full_cirtesu_visual.mtl
data/launch/: blueboat_cirtesu_fastlio.launch.py
launch/: blueboat_cirtesu.launch.py  blueboat_cirtesu_fastlio.launch.py  fastlio_localization.launch.py
scenarios/: blueboat.scn  blueboat_cirtesu_full_tank.scn  blueboat_cirtesu_tank.scn  blueboat_lidar.scn  blueboat_lidar_T200.scn  cirtesu_full.scn  cirtesu_full_roof.scn  test.scn
scripts/: cirtesu_mesh_marker.py  odom2tf.py  tf_debug_poses.py
urdf/: blueboat.xacro
